--- a/homework1android/app/src/main/res/values/strings.xml
+++ b/homework1android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">homework-1-android</string>
+    <string name="add_button_text">Add new element</string>
 </resources>
