--- a/homework2android/app/src/main/res/values/strings.xml
+++ b/homework2android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">homework-2-android</string>
+    <string name="load_error_message">Ошибка загрузки</string>
+    <string name="load_error_dialog_button_text">Повторить</string>
 </resources>
