fixing buges and adding key to local.properties

--- a/homework2android/app/src/main/res/values/strings.xml
+++ b/homework2android/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="load_error_message">Ошибка загрузки</string>
     <string name="load_error_dialog_button_text">Повторить</string>
     <string name="reload_text">Попробовать снова</string>
+    <string name="error_title">Не удалось загрузить изображения</string>
+    <string name="error_hint_text">Проверьте подключение к сети и повторите попытку</string>
 </resources>
